Added ability to disable spot instances, backfill, or both.

--- a/service/service/java/source/etc/workspace-service/spotinstances.conf
+++ b/service/service/java/source/etc/workspace-service/spotinstances.conf
@@ -12,6 +12,13 @@
 #
 ################################################################################
 
+# Indicates whether the spot instances feature is enabled (true) or disabled (false)
+# for this site.  This is for remote requests -- if backfill is enabled below, the
+# superuser backfill reqs will be honored but any remote attempt to add asynchronous
+# requests will not be honored.
+
+si.enabled=false
+
 # Indicates whether the backfill feature is enabled (true) or disabled (false)
 # for this site.  See backfill.conf
 
