--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/spotinstances.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/spotinstances.conf
@@ -12,10 +12,17 @@
 #
 ################################################################################
 
-# Indicates whether the backfill feature
-# is enabled (true) or disabled (false) for this site
+# Indicates whether the spot instances feature is enabled (true) or disabled (false)
+# for this site.  This is for remote requests -- if backfill is enabled below, the
+# superuser backfill reqs will be honored but any remote attempt to add asynchronous
+# requests will not be honored.
 
-backfill.enabled=true
+si.enabled=false
+
+# Indicates whether the backfill feature is enabled (true) or disabled (false)
+# for this site.  See backfill.conf
+
+backfill.enabled=false
 
 ################################################################################
 #
