--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/spotinstances.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/spotinstances.conf
@@ -12,9 +12,15 @@
 #
 ################################################################################
 
-# Indicates whether the backfill feature
-# is enabled (true) or disabled (false) for this site
+# Indicates whether the spot instances feature is enabled (true) or disabled (false)
+# for this site.  This is for remote requests -- if backfill is enabled below, the
+# superuser backfill reqs will be honored but any remote attempt to add asynchronous
+# requests will not be honored.  If you switch this to 'false' from 'true', it will
+# only prevent new requests from being added.
 
+si.enabled=true
+
+# (TEST SUITES: see main.xml Backfill and AsyncManager conf)
 backfill.enabled=true
 
 ################################################################################
