Added note about going back to disabled once enabled.

--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/spotinstances.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/spotinstances.conf
@@ -15,7 +15,7 @@
 # Indicates whether the spot instances feature is enabled (true) or disabled (false)
 # for this site.  This is for remote requests -- if backfill is enabled below, the
 # superuser backfill reqs will be honored but any remote attempt to add asynchronous
-# requests will not be honored.  If you switch this to 'false' from 'true', it will
+# requests will not be honored.  If you switch this to 'true' from 'false', it will
 # only prevent new requests from being added.
 
 si.enabled=true
