The backfill user is now configurable (used for repo location)

--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/backfill.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/backfill.conf
@@ -43,11 +43,17 @@ max.instances=0
 
 # DISK IMAGE
 #
-# The disk image is currently a pointer to the image file on the VMM nodes.
-# The image must be in the same location on all nodes. Also, the image must
-# be copied there manually.
+# The disk image is the image to use in the repository of the user configured below (repo.user)
 
-disk.image=/mnt/backfill-image.img
+disk.image=backfill.img
+
+
+# USER
+#
+# Authorization will be bypassed for this user but it needs to exist in order to have a
+# repository account for propagating "disk.image"
+
+repo.user=BACKFILL-SUPERUSER
 
 
 # INSTANCE MEMORY
@@ -55,7 +61,7 @@ disk.image=/mnt/backfill-image.img
 # The instance memory is the amount of memory (in MB) that the backfill image
 # will use.
 
-memory.MB=64
+memory.MB=1024
 
 
 # VCPUs
