Adjust backfill to launch the same instance types as SI is configured to do.

--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/async.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/async.conf
@@ -67,7 +67,7 @@ max.instances=0
 # DISK IMAGE
 #
 # The disk image is the image to use in the repository of the user configured
-# below (repo.user)
+# below (repo.user).  To set the instance type, see below (async.instancetype).
 
 disk.image=backfill.img
 
@@ -88,6 +88,20 @@ repo.user=BACKFILL-SUPERUSER
 #
 ################################################################################
 
+# INSTANCE TYPE
+#
+# Defines the instance type that will become available as spot instances or backfill.
+# Supported instance types are: small, large and xlarge.
+#
+# Currently, Nimbus supports only one type of spot instance or backfill VM per
+# service. The amount of memory for each instance type is defined in the
+# elastic.conf file.
+
+async.instancetype=small
+
+
+# PRICING MODEL
+#
 # A pricing model is invoked every time the Spot Instances environment changes.
 # This can happen in many situations: when a request arrives, is canceled or
 # terminated, when the quantity of resources available for Spot Instances
@@ -120,14 +134,9 @@ repo.user=BACKFILL-SUPERUSER
 
 si.pricingmodel=org.globus.workspace.async.pricingmodel.MaximizeUtilizationPricingModel
 
-# Defines the instance type that will become available as spot instances.
-# Supported instance types are: small, large and xlarge.
+
+# MINIMUM PRICE
 #
-# Currently, Nimbus supports only one Spot Instance type per site.
-# The amount of memory for each instance type is defined in the elastic.conf file.
-
-si.instancetype=small
-
 # Defines the minimum price (in allocation units) per minute that a Spot Instance
 # can cost
 
@@ -140,6 +149,8 @@ si.minprice=0.1
 #
 ################################################################################
 
+# RESERVED MEMORY
+#
 # The policies below define how the total resource pool memory is divided between
 # ordinary Workspace Service requests (1st class requests) and Asynchronous
 # requests (SI or backfill requests).
@@ -154,8 +165,11 @@ si.minprice=0.1
 # reserved exclusively for 1st class requests, and thus will not be allocated for
 # SI or backfill requests.
 
-async.policies.minreservedmem=2048
+async.policies.minreservedmem=256
 
+
+# MAX UTILIZATION
+#
 # This policy defines the maximum utilization (in %) for 1st class requests. When
 # the utilization raises above this value, Spot Instance or backfill requests are
 # pre-empted (preventive pre-emption) in order to decrease the utilization of 1st
