docs for backfill/spot (spot client guide coming next)

--- a/service/service/java/source/etc/workspace-service/async.conf
+++ b/service/service/java/source/etc/workspace-service/async.conf
@@ -5,6 +5,9 @@
 #
 ################################################################################
 
+# NOTE: There is extra documentation on these features online, see:
+# http://www.nimbusproject.org/docs/current/admin/reference.html#backfill-and-spot-instances
+
 
 # SI ENABLED
 #
