--- a/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/cumulus.conf
+++ b/service/service/java/tests/suites/spotinstances/home/services/etc/nimbus/workspace-service/cumulus.conf
@@ -4,6 +4,6 @@
 cumulus.authz.db=$NIMBUS_HOME/cumulus/etc/authz.db
 cumulus.repo.dir=$NIMBUS_HOME/cumulus/posixdata
 cumulus.host=
-cumulus.repo.bucket=Repo
+cumulus.repo.bucket=repo
 cumulus.repo.prefix=VMS
 cumulus.publicuser=CumulusPublicUser
