--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/pilot.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/pilot.conf
@@ -79,12 +79,14 @@ pbs.submit.path=qsub
 pbs.delete.path=qdel
 
 
-# Processors per node, right now this should be set to be the maximum processors
-# on each cluster node.  If it set too high, pilot job submissions will fail.
-# If it is set too low, the pilot may end up not being the only LRM job on the
-# node at a time and that is unpredictable/unsupported right now.
-
-pbs.ppn=2
+# Processors per node. If this is set to 0, your pilot job will request
+# as many processors as are requested for a VM. For example, if a user requests
+# a 2 core VM, ppn will be set to 2.
+#
+# On some installations, you may wish to hardcode this to a specific value
+# to ensure that each pilot job reserves a whole node for a VM. In this case, 
+# choose a non-zero value.
+pbs.ppn=0
 
 
 # If the pilot job should be submitted to a special queue/server, configure
