Improvements to pilot configuration file documentation.

--- a/service/service/java/source/etc/workspace-service/pilot.conf
+++ b/service/service/java/source/etc/workspace-service/pilot.conf
@@ -45,7 +45,13 @@ contact.socket=1.2.3.4:41999
 #
 ################################################################################
 
-# The path to the pilot program on the VMM nodes:
+# The path to the pilot program on the VMM nodes.
+#
+# If you would like to use a configuration file, rather than the embedded
+# configuration, add the -p and path to your configuration file to your path.
+# For example:
+#
+# pilot.path=/opt/workspacepilot.py -p /etc/workspacepilot.conf
 
 pilot.path=/opt/workspacepilot.py
 
