Add support for configurable accounting strings

--- a/service/service/java/source/etc/workspace-service/pilot.conf
+++ b/service/service/java/source/etc/workspace-service/pilot.conf
@@ -118,6 +118,14 @@ pbs.grace=8
 pbs.extra.properties=
 
 
+# Optional, if you would like to append an accounting string to your qsub
+# invokation, you can use either the user's certificate DN, the user's display
+# name as shown by nimbus-list-users, or the user's authz DB accounting group. 
+#
+# You can select these with 'dn', 'displayname', or 'group'
+
+pbs.accounting.type=
+
 # Optional, if configured this is prepended to the pilot exe invocation if
 # nodes needed are greater than one.  Torque uses pbsdsh for this.
 
