Adapt tmplease documentation for KVM

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -44,7 +44,7 @@ blankcreate: blankcreate.sh
 # *Experimental*
 #
 # Enabling this preliminary feature lets you configure a list of physical
-# partitions to "lease" to incoming VMs.  Only works with Xen currently.
+# partitions to "lease" to incoming VMs.
 #
 # *WARNING* Configure the list of physical partitions carefully.  They are
 # formatted every time they are used!
@@ -57,8 +57,9 @@ blankcreate: blankcreate.sh
 enabled:
 
 
-# This is the partition to 'present' to every VM for tmp space if this
-# feature is enabled.  Must use the 4 letter version, e.g. "sda2"
+# This is the partition or disk to 'present' to every VM for tmp space if this
+# feature is enabled.  Must use the 4 letter version, e.g. "sda2", for Xen, and
+# the 3 letter version, e.g. "hdb", for KVM.
 
 vmpartition: sda2
 
