repackaging lantorrent to be more pythonic

--- a/lantorrent/etc/lt.ini
+++ b/lantorrent/etc/lt.ini
@@ -2,7 +2,7 @@
 password=nimbus
 
 [log]
-file=@LANTORRENT_HOME@/log/lantorrent.@PGM@.log
-level=debug
+file=@LANTORRENT_HOME@/lantorrent.@PGM@.log
+level=info
 [db]
-file=@LANTORRENT_HOME@/etc/req.db
+file=@LANTORRENT_HOME@/req.db
