Cleaned up EC2 keypair situation
Implemented ImportKeyPair operation. Left our nonstandard CreateKeyPair behavior, but disabled.
Closes #36

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
@@ -55,19 +55,19 @@ repository.idauthz=
 #
 ################################################################################
 
-# The expected behavior of create-key by elastic clients is for the service to
-# *generate* a keypair server-side and return the private key.
+# In the past, the Elastic API only supported *generating* a key pair in the
+# server side. Nimbus supported an optional avenue for uploading your own
+# private key instead. Now there is also an ImportKeyPair operation which
+# is part of the API. This should be used instead.
 #
-# By default this service does something different but it can be changed to
-# do that.
+# If you rely on the legacy behavior of CreateKeyPair, it can be enabled below:
 #
 # Instead of sending the name of the key to create, clients can send the name
 # of the key and the public key value.  Including a separation token (defined
 # below) is necessary.
 #
-# You can disable this behavior by setting "ssh.pubkey.only=false" here.
-
-ssh.pubkey.only=true
+# You can enable/disable this behavior by setting true or false here:
+ssh.pubkey.only=false
 
 
 # If "ssh.pubkey.only=true" then this "ssh.split.token" setting is in effect.
