disabling caching by default

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -43,8 +43,8 @@ blankcreate: blankcreate.sh
 #     as securelocaldir.  The size of the cache can be set as well.  The 
 #     default of 0 sets it to unlimited
 
-cachedir: imagecache
-cache_size: 0
+#cachedir: imagecache
+#cache_size: 0
 
 
 # -------------------------------------------------------------------------
