blankcreate had inconsistent comment format

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -24,10 +24,10 @@ localdir: images
 
 securelocaldir: secureimages
 
-
-# This is called when making a blankspace partition.  This is not called 
-# under sudo.  It's just separated into a script for easier replacement or
-# customization.
+# blankcreate script
+#  - this is called when making a blankspace partition.  This is not called
+#    under sudo.  It's just separated into a script for easier replacement or
+#    customization.
 #  - if this setting is a relative path, it will be resolved from the
 #     workspace-control specific libexec directory (see "dirs.conf")
 #  - if this setting is missing or blank, the blankspace functionality will
