--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -38,7 +38,7 @@ blankcreate: blankcreate.sh
 # the image cache directory
 #   - this is the directory where images are cached.  When an image is 
 #     propagated it is put in this cache.  Prior to propagation (and if
-#     the --cachechksum option is used) the cache is checked to see 
+#     the --cachecksum option is used) the cache is checked to see
 #     if the image is already local.  This directory has the same constraints
 #     as securelocaldir.  The size of the cache can be set as well.  The 
 #     default of 0 sets it to unlimited
