added nfs comment and made bullets

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -39,9 +39,10 @@ blankcreate: blankcreate.sh
 #   - this is the directory where images are cached.  When an image is 
 #     propagated it is put in this cache.  Prior to propagation (and if
 #     the --cachecksum option is used) the cache is checked to see
-#     if the image is already local.  This directory has the same constraints
-#     as securelocaldir.  The size of the cache can be set as well.  The 
-#     default of 0 sets it to unlimited
+#     if the image is already local.
+#   - this directory has the same constraints as securelocaldir
+#   - this directory can not be a path on a network file system
+#   - the max size of the cache can be set, 0 (default) sets it to unlimited
 
 #cachedir: imagecache
 #cache_size: 0
