ording based on mtime not ctime

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -44,6 +44,7 @@ blankcreate: blankcreate.sh
 #   - this directory can not be a path on a network file system
 #   - the max size of the cache can be set, 0 (default) sets it to unlimited
 
+#cachelockfile: lock
 #cachedir: imagecache
 #cache_size: 0
 
