adding a new propagation adapter.

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -13,6 +13,7 @@
 
 scp: /usr/bin/scp
 #guc: /opt/globus/bin/globus-url-copy
+cp: /bin/cp
 
 
 # If using scp, if user is not specified in URL (e.g., scp://lily@host/path),
