--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ setuptools-0.6c11-py2.7.egg
 /cumulus/deps/nose-0.11.3.tar.gz
 /cumulus/deps/pyOpenSSL-0.10.tar.gz
 /cumulus/deps/zope.interface-3.6.1.tar.gz
+cumulus/deps/boto-2.0b4.tar.gz
 /cumulus/pip-0.7.2.tar.gz
-
+lantorrent/lantorrent.egg-info/
