lib/workspaceservice is for jars in lib/services that are only used by IaaS

--- a/service/service/java/source/build.properties
+++ b/service/service/java/source/build.properties
@@ -6,7 +6,8 @@ nimbus.service.main.src.dir=src
 nimbus.service.main.dist.dir=dist
 nimbus.service.main.jar.name=nimbus-workspace-service.jar
 
-nimbus.service.main.lib.dir=../../../../lib/services
+nimbus.service.main.baselib.dir=../../../../lib/services
+nimbus.service.main.lib.dir=../../../../lib/workspaceservice
 
 # Compile dependencies from source tree
 nimbus.service.api.dist.dir=../../../../service-api/java/source/dist/
