Changes to ctx broker for standalone: different authZ and GAR includes libs now

--- a/ctx-broker/build.properties
+++ b/ctx-broker/build.properties
@@ -18,3 +18,4 @@ nimbus.ctxbroker.lib.dir=../lib/services
 nimbus.messaging.query.dist.dir=../messaging/query/java/source/dist
 nimbus.service.api.dist.dir=../service-api/java/source/dist/
 nimbus.authz.dist.dir=../authzdb/dist
+nimbus.querygeneral.dist.dir=../query/dist
