Separate build & dist system for standalone context broker, some ant-code dupe

--- a/scripts/lib/gt4.0/brokerdist/build.properties
+++ b/scripts/lib/gt4.0/brokerdist/build.properties
@@ -1,6 +1,6 @@
 # Nimbus distribution properties
 
-nimbus.version=2.8RC1
+ctxbroker.version=2.8RC1
 
 binary.suffix=bin
 source.suffix=src
@@ -11,28 +11,14 @@ distbuild.dir=build
 
 # ============================================================
 
-base.name=nimbus-iaas-
-
-controls.name=controls
-client.name=client
-
-nimbus.main=${base.name}${nimbus.version}-${source.suffix}
-nimbus.controls=${base.name}${controls.name}-${nimbus.version}
-nimbus.client=${base.name}${client.name}-${nimbus.version}
+base.name=nimbus-ctxbroker-
+nimbus.main=${base.name}${ctxbroker.version}-${source.suffix}
 
 # ============================================================
 
 nimbus.main.builddir=../build
 
 nimbus.basedir=../../../../
-
-nimbus.controls.builddir=${nimbus.basedir}/control
-nimbus.controls.dest=${distbuild.dir}/${nimbus.controls}/workspace-control
-
-nimbus.controls2.builddir=${nimbus.basedir}/pilot
-nimbus.controls2.dest=${distbuild.dir}/${nimbus.controls}/pilot
-
-nimbus.client.builddir=${nimbus.basedir}/service/client/java/source
 
 nimbus.web.autocommon.distbuild.dir=autocommonbuild
 
