First commit of nimbus-admin tools method. Run bin/nimbus-admin to use.

--- a/service/service/java/source/etc/workspace-service/admin.conf
+++ b/service/service/java/source/etc/workspace-service/admin.conf
@@ -33,3 +33,5 @@ socket.dir=$NIMBUS_HOME/var/run/privileged/
 
 # name used for binding the VMM node management implementation
 rmi.binding.nodemgmt=nodemgmt
+# name used for binding the admin tools management implementation
+rmi.binding.admintools=admintools
