Test suite to examine destruction errors during backfill preemption

--- a/service/service/java/tests/suites/build.properties
+++ b/service/service/java/tests/suites/build.properties
@@ -40,3 +40,4 @@ st.spot02=NoResourcesSISuite
 st.spot03=SimpleSISuite
 st.spot04=SimplestSISuite
 st.spot05=SingleResourcePoolSISuite
+st.spot06=BackfillTerminationSuite
