--- a/service/service/java/tests/suites/build.xml
+++ b/service/service/java/tests/suites/build.xml
@@ -251,8 +251,14 @@
             <param name="runone.suite.report.subdir" value="basic-${st.spot05}"/>
         </antcall>
     </target>
+    <target name="spot06">
+        <antcall target="runone">
+            <param name="runone.suite.file" value="${st.spot.dir}/${st.spot06}.xml"/>
+            <param name="runone.suite.report.subdir" value="basic-${st.spot06}"/>
+        </antcall>
+    </target>
 
-    <target name="allspot" depends="spot01,spot02,spot03,spot04,spot05" />
+    <target name="allspot" depends="spot01,spot02,spot03,spot04,spot05,spot06" />
 
 
     <!-- *******************************************************************
