Tests for termination backoff suite

--- a/service/service/java/tests/suites/build.properties
+++ b/service/service/java/tests/suites/build.properties
@@ -32,6 +32,7 @@ st.basic06=ParallelIdempotentCreationSuite
 # FAILURE SUITES
 st.failure.dir=${nimbus.suitesdir}/failure
 st.failure01=TerminateSuite
+st.failure02=BackoffSuite
 
 # SPOT INSTANCE SUITES
 st.spot.dir=${nimbus.suitesdir}/spotinstances
