Added alternative destruction procedure

--- a/control/etc/workspace-control/libvirt.conf
+++ b/control/etc/workspace-control/libvirt.conf
@@ -11,6 +11,29 @@ vmm: xen3
 template: libvirt_template.xml
 
 
+# New as of Nimbus IaaS 2.8
+# Config can be missing, will default to "destroy"
+# The historical behavior of Nimbus is to gracefully shutdown an instance
+# if it is going to be unpropagated back, otherwise it is a hard destroy.
+# The following setting will override the behavior of workspace-control and
+# actually attempt to gracefully shutdown the instance before destroying it. 
+# This allows the node's kernel to cleanly shut things down like TCP
+# connections.  Use "destroy" for the traditional behavior (the default
+# configuration) and use "shutdown" to trigger shutdown + destroy. 
+
+destroy_method: destroy
+
+# New as of Nimbus IaaS 2.8
+# Config can be missing if destroy_method is destroy.
+# If using "shutdown" for "destroy_method", the following configuration will
+# control how much time is allowed before the graceful shutdown is abandoned.
+# The current implementation will wait the full grace period in all cases,
+# so set to something low like 5 seconds.
+# In seconds.  Using < 1 is illegal.
+
+shutdown_grace: 5
+
+
 [libvirt_connections]
 
 # You should be able to connect using the "virsh" tool with these strings.
