--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
@@ -69,3 +69,5 @@ unknown.privnet=[unknown]
 
 # disk-persistent caching
 caches.dir=$NIMBUS_HOME/services/var/nimbus/elastic-caches
+
+elastic.db=$NIMBUS_HOME/services/var/nimbus/elastic.db
