Replace ehcache persistence for Spot instances with Derby persistence

--- a/service/service/java/tests/suites/build.properties
+++ b/service/service/java/tests/suites/build.properties
@@ -28,6 +28,7 @@ st.basic03=IdemptotentCreationSuite
 st.basic04=Issue37Suite
 st.basic05=NodeManagementSuite
 st.basic06=ParallelIdempotentCreationSuite
+st.basic07=AsyncRequestMapSuite
 
 # FAILURE SUITES
 st.failure.dir=${nimbus.suitesdir}/failure
