Include units in cache max size config comment

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -42,7 +42,8 @@ blankcreate: blankcreate.sh
 #     if the image is already local.
 #   - this directory has the same constraints as securelocaldir
 #   - this directory can not be a path on a network file system
-#   - the max size of the cache can be set, 0 (default) sets it to unlimited
+#   - the max size (in bytes) of the cache can be set, 0 (default) sets it
+#     to unlimited
 
 #cachedir: imagecache
 #cache_size: 0
