Needed to adjust service suites for new jar directory layout

--- a/service/service/java/tests/suites/build.properties
+++ b/service/service/java/tests/suites/build.properties
@@ -5,6 +5,7 @@ nimbus.st.service.main.builddir=${nimbus.st.basedir}/service/service/java/source
 nimbus.st.metadata.builddir=${nimbus.st.basedir}/metadata/java/source
 nimbus.st.authzdb.builddir=${nimbus.st.basedir}/authzdb
 nimbus.st.main.lib.dir=${nimbus.st.basedir}/lib/services
+nimbus.st.workspaceservice.lib.dir=${nimbus.st.basedir}/lib/workspaceservice
 nimbus.st.test.lib.dir=${nimbus.st.basedir}/lib/test
 nimbus.st.service.api.dist.dir=${nimbus.st.basedir}/service-api/java/source/dist
 nimbus.st.service.main.dist.dir=${nimbus.st.basedir}/service/service/java/source/dist
