Better default group-authz configuration
Got rid of group setting for users in make-test-env.sh

--- a/service/service/java/source/etc/workspace-service/group-authz/group04.properties
+++ b/service/service/java/source/etc/workspace-service/group-authz/group04.properties
@@ -1,33 +1,14 @@
-# For logging and other side-purposes
-vws.group.authz.groupname=TESTING
+vws.group.authz.groupname=UNLIMITED
 
-# Maximum currently reserved minutes at one point in time
-# If the  caller has two other workspaces with 600 minutes scheduled
-# for each, the value being checked against this policy would be 1200 minutes
-# plus whatever time the current request is for.
-vws.group.authz.maxReservedMinutes=300
+# 0 means no restriction
+vws.group.authz.maxReservedMinutes=0
 
-# Maximum elapsed (finished) and currently reserved minutes at one point in time
-# If the caller has one other workspace with 600 minutes scheduled and 6000
-# minutes of recorded past usage, the value being checked against this policy
-# would be 6600 minutes plus whatever time the current request is for.  This is
-# the all-time maximum usage cap.
-vws.group.authz.maxElapsedReservedMinutes=300
+# 0 means no restriction
+vws.group.authz.maxElapsedReservedMinutes=0
 
-# Maximum number of CPUs per VM instance
-vws.group.authz.maxCPUs=2
+# 0 means no restriction
+vws.group.authz.maxWorkspaceNumber=0
 
-# Maximum number of running workspaces at one point in time
-vws.group.authz.maxWorkspaceNumber=5
+# 0 means no restriction
+vws.group.authz.maxWorkspacesInGroup=0
 
-# Maximum number of workspaces per request
-vws.group.authz.maxWorkspacesInGroup=1
-
-# Image node
-vws.group.authz.imageNodeHostname=example.com
-
-# Image node basedir
-vws.group.authz.imageBaseDirectory=/cloud
-
-# Use DN hashing convention for user-specific subdirectories (see documentation)
-vws.group.authz.dirHashMode=true
