--- a/service/service/java/source/etc/workspace-service/group-authz/group01.properties
+++ b/service/service/java/source/etc/workspace-service/group-authz/group01.properties
@@ -1,22 +1,26 @@
+# For logging and other side-purposes
 vws.group.authz.groupname=UNLIMITED
 
 # 0 means no restriction
+
+# Maximum currently reserved minutes at one point in time
+# If the  caller has two other workspaces with 600 minutes scheduled
+# for each, the value being checked against this policy would be 1200 minutes
+# plus whatever time the current request is for.
 vws.group.authz.maxReservedMinutes=0
 
-# 0 means no restriction
+# Maximum elapsed (finished) and currently reserved minutes at one point in time
+# If the caller has one other workspace with 600 minutes scheduled and 6000
+# minutes of recorded past usage, the value being checked against this policy
+# would be 6600 minutes plus whatever time the current request is for.  This is
+# the all-time maximum usage cap.
 vws.group.authz.maxElapsedReservedMinutes=0
 
-# 0 means no restriction
+# Maximum number of CPUs per VM instance
+#vws.group.authz.maxCPUs=2
+
+# Maximum number of running workspaces at one point in time
 vws.group.authz.maxWorkspaceNumber=0
 
-# 0 means no restriction
+# Maximum number of workspaces per request
 vws.group.authz.maxWorkspacesInGroup=0
-
-# not present means no restriction
-#vws.group.authz.imageNodeHostname=
-
-# not present means no restriction
-#vws.group.authz.imageBaseDirectory=
-
-# not present means false
-#vws.group.authz.dirHashMode=
