--- a/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/global-policies.conf
+++ b/service/service/java/tests/suites/basic/home/services/etc/nimbus/workspace-service/global-policies.conf
@@ -84,6 +84,6 @@ allow.other.schemes=false
 # This is a list of hosts that the users are allowed to propagate images from 
 # via http propagation. This should be a comma separated list.
 #
-# If http is desired, "allow.other.propagation.schemes" above must be enabled.
+# If http is desired, "allow.other.schemes" above must be enabled.
 
 allowed.http.hosts=
