patch for GH-70

--- a/lantorrent/etc/lantorrent.inet.in
+++ b/lantorrent/etc/lantorrent.inet.in
@@ -8,4 +8,5 @@ service @SERVICENAME@
 	wait		= no
     port        = @PORT@
     server      = @SERVER@
+    env         = HOME=/opt/nimbus
 }                                                                               
