CPU count support in instance types

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
@@ -12,6 +12,9 @@
 memory.small=2048
 memory.large=2048
 memory.xlarge=2048
+cpus.small=1
+cpus.large=2
+cpus.xlarge=4
 
 
 # There is a concept of "public" and "private" networks built into the elastic
