Add EC2Suite to build.properties

--- a/service/service/java/tests/suites/build.properties
+++ b/service/service/java/tests/suites/build.properties
@@ -30,6 +30,7 @@ st.basic04=Issue37Suite
 st.basic05=NodeManagementSuite
 st.basic06=ParallelIdempotentCreationSuite
 st.basic07=AsyncRequestMapSuite
+st.basic08=EC2Suite
 
 # FAILURE SUITES
 st.failure.dir=${nimbus.suitesdir}/failure
