adding status details to service

--- a/service/service/java/source/etc/workspace-service/other/common.conf
+++ b/service/service/java/source/etc/workspace-service/other/common.conf
@@ -67,3 +67,5 @@ msgsinks.dir=$NIMBUS_HOME/services/var/nimbus/msg-sinks
 
 #propagate.extraargs=$NIMBUS_HOME/lantorrent/bin/lt-request.sh
 propagate.extraargs=
+
+details.hostname=false
