Update elastic configuration documentation

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
@@ -4,10 +4,10 @@
 #
 ################################################################################
 
-# There are three resource allocation types: small, large, and xlarge.  To
-# comply with the current cloud configuration, you can set these all to be the
-# same as the cloud.properties memory value.  Support for translating instance
-# type requests into free space and number of CPUs is on its way.
+# There are three resource allocation types: small, large, and xlarge.  
+# You will want to define both the memory and cpus available to these nodes.
+# Note that it is still possible to oversubscribe CPUs, so be cautious with
+# small memory large CPU allocations.
 
 memory.small=2048
 memory.large=2048
