Enable having blankspace partition in a separate location
On a cloud setup where large amounts of blankspace are required it was
deemed desireable to have the image directory split from the blankspace
file. This would hopefully allow the IO load to be spread out.

Closes #83 and #86.

--- a/control/etc/workspace-control/images.conf
+++ b/control/etc/workspace-control/images.conf
@@ -24,14 +24,24 @@ localdir: images
 
 securelocaldir: secureimages
 
+# blankspace partition directory
+#   - this directory is where instance specific images that use blankspace
+#     will create their partition
+#   - this can be the same or separate from the securelocaldir for performance
+#   - if this setting is a relative path, it will be resolved from the
+#     workspace-control specific var directory (see "dirs.conf")
+
+blankspacedir: secureimages
+
 # blankcreate script
-#  - this is called when making a blankspace partition.  This is not called
-#    under sudo.  It's just separated into a script for easier replacement or
-#    customization.
-#  - if this setting is a relative path, it will be resolved from the
+#   - this is called when making a blankspace partition.  This is not called
+#     under sudo.  It's just separated into a script for easier replacement or
+#     customization.
+#   - if left blank if will default to the securelocaldir location
+#   - if this setting is a relative path, it will be resolved from the
 #     workspace-control specific libexec directory (see "dirs.conf")
-#  - if this setting is missing or blank, the blankspace functionality will
-#    be disabled
+#   - if this setting is missing or blank, the blankspace functionality will
+#     be disabled
 
 blankcreate: blankcreate.sh
 
