first attempted at being able to set the ec2 interface network

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
@@ -12,10 +12,17 @@
 memory.small=2048
 memory.large=2048
 memory.xlarge=2048
+memory.custom=2048
+
 cpus.small=1
 cpus.large=2
 cpus.xlarge=4
+cpus.custom=1
 
+#network.small=public
+#network.large=public
+#network.xlarge=public
+network.custom=private
 
 # There is a concept of "public" and "private" networks built into the elastic
 # interface.  You need to map these to the real networks to request from the
