--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/other/other-elastic.conf
@@ -34,6 +34,7 @@ rootfile.mountas=sda1
 ra.name.small=m1.small
 ra.name.large=m1.large
 ra.name.xlarge=m1.xlarge
+ra.name.custom=m1.private
 
 
 # Kernel names.  The cloud client and service can select kernels.  Will add
