need default values for the bean

--- a/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
+++ b/messaging/gt4.0-elastic/java/msgbridge/etc/elastic/elastic.conf
@@ -19,9 +19,9 @@ cpus.large=2
 cpus.xlarge=4
 cpus.custom=1
 
-#network.small=public
-#network.large=public
-#network.xlarge=public
+network.small=
+network.large=
+network.xlarge=
 network.custom=private
 
 # There is a concept of "public" and "private" networks built into the elastic
