Add an option to allow cross server redirects

--- a/control/etc/workspace-control/propagation.conf
+++ b/control/etc/workspace-control/propagation.conf
@@ -34,6 +34,12 @@ http: false
 # This allows you to authenticate with the server with an x509 credential.
 https: false
 
+# Set this to 'true' to allow cross server redirects from https.
+# You might want this to be false if you have a very strict whitelist and 
+# do not trust your https servers to not redirect to a server that isn't on
+# the whitelist
+https-cross-server-redirect: true
+
 # Hadoop Distributed File System (hdfs)
 # Make this point to the hadoop executable of your install.  Environment
 # variables of the form $var and ${var} will be expanded if possible.
